# libaudiothek

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: mkdocs.yml
docs/: audiothek_schema.md  index.md  libaudiothek.md
libaudiothek/: audiothek_schema.py  index.html  libaudiothek.py
search/: search_index.json
src/libaudiothek/: libaudiothek.py
src/libaudiothek_merlinschumacher/: libaudiothek.py
tests/: test_libaudiothek.py
