[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libaudiothek_merlinschumacher"
version = "0.0.1"
authors = [
  { name="Merlin Schumacher", email="merlin.schumacher@gmail.com" },
]
description = "A Python library to access the audiothek.de API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["audiothek", "api", "ard", "media", "podcast", "radio", "audio"]

[project.urls]
"Homepage" = "https://github.com/merlinschumacher/libaudiothek"
"Bug Tracker" = "https://github.com/merlinschumacher/libaudiothek/issues"